--- a/src/components/Theme/themeSwitch.css
+++ b/src/components/Theme/themeSwitch.css
@@ -25,8 +25,10 @@
     padding: 0 .5rem;
     transition: .3s ease-in-out;
 
+
     
   }
+
   .active::before{
     content: "";
     position: absolute;
@@ -43,3 +45,8 @@
     transition: .3s ease-in-out;
 
   }
+  .active{
+    color: #fff!important;
+
+  }
+  
