--- a/src/components/AsideBar/asideBar.css
+++ b/src/components/AsideBar/asideBar.css
@@ -10,6 +10,7 @@
     background: url("../../assets/images/bg.jpg") no-repeat center top/cover;
     color: #fff;
     z-index: 5;
+    border-radius: 0;
   }
   .aside-wrapper.minimized{
     width: fit-content!important;
@@ -90,7 +91,10 @@
 
 }
 .current-board-closed{
-  width: fit-content!important;
+  width: 3rem!important;
+}
+.board-icon{
+  scale: 1.2;
 }
 .add-board-btn{
     margin-top: 1.4375rem;
