--- a/src/App.css
+++ b/src/App.css
@@ -33,47 +33,43 @@ input {
 .light-header {
   background-color: #fff !important;
   color: var(--dark-gray) !important;
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.276);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.148);
+  transition: 0.3s ease-in-out !important;
+  border: none!important;
 }
 .light-board-wrapper {
-  background-color: #ffffff !important;
+  background-color: #ffffffd2 !important;
   color: var(--dark-gray) !important;
+  transition: 0.3s ease-in-out !important;
 }
-.light-text{
-    color: #131314 !important;
+.light-text {
+  color: #131314 !important;
+  transition: 0.3s ease-in-out !important;
 }
-.light-card{
-    background-color: #f4fbf5 !important;
-    color: var(--dark-gray) !important;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.21)!important;   
+.light-card {
+  background-color: #f4fbf5 !important;
+  background-color: var(--mint) !important;
+  color: var(--dark-gray) !important;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.21) !important;
+  transition: 0.3s ease-in-out !important;
 }
-.light-modal-wrapper{
-  background-color: #03030394!important;
+.light-modal-wrapper {
+  background-color: #000000d8 !important;
+  transition: 0.3s ease-in-out !important;
 }
-.light-modal{
-    background-color: #f4fbf5 !important;
-    color: var(--dark-gray) !important;
+.light-modal {
+  background-color: #f4fbf5 !important;
+  color: var(--dark-gray) !important;
+  transition: 0.3s ease-in-out !important;
 }
 .light-overlay {
-background: linear-gradient(to bottom, #0405046b, #9dbaa167,#e1e7e267)!important;
+  background: linear-gradient(
+    to bottom,
+    #0405046b,
+    #9dbaa167,
+    #e1e7e267
+  ) !important;
+  transition: 0.3s ease-in-out !important;
 }
 
-@media (width <= 455px){
-  .modal-wrapper{
-    padding: 0;
-  }
-  .modal-container{
-    border-radius: 0!important;
-    min-height: 100vh!important;
-    padding: 2rem 1rem!important;
-  }
-  .columns-wrapper{
-    flex-direction: column!important;
-    align-items: flex-start!important;
-    
-  }
-  .column-btn{
-    width:300px!important;
-  }
 
-}
