--- a/src/components/AsideBar/asideBar.css
+++ b/src/components/AsideBar/asideBar.css
@@ -15,7 +15,9 @@
   .aside-wrapper.minimized{
     width: fit-content!important;
     position: relative;
-    min-width: 75px;
+    min-width: 50px;
+    align-items: center!important;
+    padding:2rem .8rem!important;
   }
   .logo-menu-wrapper{
     width: 100%;
@@ -29,10 +31,11 @@
 .toggle-menu-btn{
     
     position: absolute;
-    right: -2.1rem;
+    right: -1.9rem;
     border-radius: .3rem;
     background-color: #ffffff;
     padding: .1rem;
+    margin-top: .2rem;
     
 
 }
@@ -76,7 +79,7 @@
     gap: .625rem;
     font-weight: bold;
     font-size: .875rem;
-    justify-content: flex-start;
+    justify-content: center;
     padding: 0 .5rem;
     text-transform: uppercase;
 
@@ -103,8 +106,11 @@
     font-size: .875rem;
     width: 100%;
     justify-content: flex-start;
-    margin-left: .5rem;
+    /* margin-left: .5rem; */
 
+}
+.closed-add{
+  justify-content: center;
 }
 
 
