--- a/src/components/TaskCard/taskCard.css
+++ b/src/components/TaskCard/taskCard.css
@@ -5,10 +5,11 @@
   align-items: flex-start;
   gap: 1.2rem;
   margin-top: 2.5rem;
-  padding-bottom: 1rem;
+  padding-bottom: 4rem;
 }
 .task-card {
-  width: 350px;
+  min-width: 220px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -16,47 +17,60 @@
   border-radius: 1rem;
   position: relative;
   z-index: 2;
+  padding: 1.5rem 1rem;
 }
 
-.overlay.task-cover {
-  background: #04070a92;
-  border-radius: .8rem;
-  backdrop-filter: blur(5px);
-}
-.light-overlay-card{
-  background-color: #222b37b9!important;
-  border-radius: .9rem;
-
-}
 .info-actions-wrapper {
-  margin-top: 0.4rem;
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 0 0.75rem 0.95rem 0.75rem;
+  gap: .5rem;
 }
 .card-info {
   width: 100%;
+  color: #fff;
 }
 .task-title {
-  font-weight: 600;
-  font-size: 1.25rem;
-  color: #fff;
+  font-weight: 800;
+  font-size: 1.15rem;
 }
 .task-parag {
   color: var(--soft-cream);
-  width: 90%;
 }
-.complete{
+.complete {
   text-decoration: line-through;
-  color: rgb(215, 210, 210)!important;
+  color: rgb(158, 156, 156) !important;
 }
-.options-btn-wrapper {
+.options-container {
+  position: relative;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   align-items: flex-end;
+}
+.open-options-btn {
+  background-color: var(--azure);
+  border-radius: 50%;
+  color: #fff;
+}
+.options-btn-wrapper {
+  position: absolute;
+  top: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: .4rem;
+  background-color: var(--charcoal);
+  padding: .75rem 1.5rem;
+  gap: .5rem;
+  border-radius: 0.25rem!important;
+  box-shadow: 0 0 1rem rgba(12, 219, 22, 0.036);
+  z-index: 5;
+}
+.light-wrapper{
+  background-color: #fff;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.17);
+
 }
 .edit-task-btn,
 .delete-task-btn {
@@ -64,30 +78,15 @@
   position: relative;
   transition: 0.3s ease-in-out;
   z-index: 4;
+  padding: 0 .5rem;
 }
 .delete-task-btn {
   color: var(--crimson);
   margin-top: 0.5rem;
 }
-.edit-task-btn::before,
-.delete-task-btn::before {
-  content: "";
-  position: absolute;
-  width: 140%;
-  height: 0;
-  /* scale: 0; */
-  transform: translateY(-3px);
-  background-color: #cbced32b;
-  z-index: 1;
-  border-radius: 50%;
-  transition: .3s ease-in-out;
-}
-.edit-task-btn:hover::before,.delete-task-btn:hover::before{
-    /* scale: 1.3; */
-    transform: translateY(0);
-    transition: .3s ease-in-out;
-    width: 140%;
-    height: 140%;
+.edit-task-btn:hover,.delete-task-btn:hover,.open-options-btn:hover{
+scale: 1.1;
+transition: 0.3s ease-in-out;
 
 }
 .tags-wrapper {
@@ -117,9 +116,9 @@
 }
 
 /* LIGHT MODE STYLES */
-.light-delete-btn{
+.light-delete-btn {
   color: #e85746;
 }
-.light-edit-btn{
+.light-edit-btn {
   color: #ffffff;
 }
