--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --light-cream: #FDF9C9;
   --emerald: #4CA154;
   --mint: #E2FBE8;
+  --mint: #84b790;
   --soft-cream: #FEF7EE;
   --lavender: #F0F6FE;
 }
